# vt-map-editor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Editor-Info.plist  LICENSES  README.md  README.txt  vt-editor.appdata.xml  vt-editor.desktop
data/: data.qrc
src/: CMakeLists.txt  dialog_boxes.cpp  dialog_boxes.h  editor.cpp  editor.h  editor_main.cpp  grid.cpp  grid.h  tileset.cpp  tileset.h  tileset_editor.cpp  tileset_editor.h
src/script/: script.cpp  script.h  script_read.cpp  script_read.h  script_write.cpp  script_write.h
src/utils/: exception.cpp  ustring.cpp  ustring.h  utils_files.cpp  utils_files.h  utils_numeric.cpp  utils_numeric.h  utils_pch.h  utils_random.cpp  utils_strings.cpp  utils_strings.h
